<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        android:contentDescription="@string/vedi_profilo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notification"
        android:contentDescription="@string/vedi_notifiche"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="Informazioni"
        android:contentDescription="Vedi informazioni"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        android:contentDescription="@string/disconnetti"
        app:showAsAction="never"/>

</menu>