<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        style="@style/color_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/acceptButton"
                style="@style/buttonAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Accetta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/refuseButton"
                app:layout_constraintTop_toBottomOf="@+id/note_text"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/refuseButton"
                style="@style/buttonRefuse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Rifiuta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/acceptButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_text" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="h,1:1.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_popup"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="@string/user_name" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/user_township"
                app:layout_constraintBottom_toTopOf="@+id/flag"
                app:layout_constraintEnd_toEndOf="@+id/user"
                app:layout_constraintStart_toStartOf="@+id/user"
                app:layout_constraintTop_toBottomOf="@+id/user" />

            <TextView
                android:id="@+id/note_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="4"
                android:scrollbars="vertical"
                android:text="@string/lorem_ipsum_long"
                app:layout_constraintBottom_toTopOf="@+id/refuseButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/return_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="Data restituzione: dd/hh/yyyy"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/user"
                app:layout_constraintStart_toStartOf="@+id/user"
                app:layout_constraintTop_toBottomOf="@+id/flag"
                app:layout_constraintVertical_bias="1.0"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/flag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Reputazione"
                android:textColor="?colorError"
                app:layout_constraintEnd_toEndOf="@+id/user"
                app:layout_constraintStart_toStartOf="@+id/user"
                app:layout_constraintTop_toBottomOf="@+id/user_location" />

            <TextView
                android:id="@+id/title_popup"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:background="?attr/colorPrimaryContainer"
                android:gravity="left|center_vertical"
                android:paddingHorizontal="32dp"
                android:text="Richiesta di prestito"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>